# fedn

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .hadolint.yaml  .readthedocs.yaml  .trivyignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  How-to-access-monitor  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  architecture.html  casa_clients.yaml  client.yaml  combiner.yaml  dashboard.yaml  datacenter-clients.yaml  deployment.html  docker-compose.dev.yaml  docker-compose.live.yaml  docker-compose.yaml  faq.html  fashion-mnist-clients.yaml  fedn.aggregators.html  fedn.algo.html  fedn.clients.client.html  fedn.clients.combiner.html  fedn.clients.html  fedn.clients.reducer.html  fedn.clients.reducer.statestore.html  fedn.common.control.html  fedn.common.html  fedn.common.net.grpc.html  fedn.common.net.html  (+35 more)
python/: pyproject.toml
python/examples/FedSimSiam/: .gitignore
python/examples/FedSimSiam/client/: data.py  model.py  validate.py
python/examples/api-tutorials/: Hyperparameter_Tuning.ipynb
python/examples/async-clients/: client_status.py  config.py  init_seed.py
python/examples/cifar100/: .gitignore
python/examples/flower-client/: init_fedn.py
python/examples/flower-client/client/: entrypoint.py  flwr_task.py
python/examples/huggingface/client/: data.py  model.py
python/examples/importer-client/: .gitignore
python/examples/importer-client/client/: build.py
python/examples/load-test/: .gitignore
python/examples/load-test/client/: train.py  validate.py
python/examples/mnist-keras/: .gitignore  README.rst  requirements.txt
python/examples/mnist-keras/client/: data.py  train.py  validate.py
python/examples/mnist-pytorch/client/: predict.py  train.py
python/examples/monai-2D-mednist/: .gitignore  README.rst
python/examples/monai-2D-mednist/client/: .scaleoutignore  data.py  model.py
python/examples/pytorch-keyworddetection-api/: README.rst  data.py  main.py  model.py  requirements.txt  sc_client.py
python/examples/server-functions/: send_attributes.py  server_functions.py  start_sf_session.py
python/examples/server-functions/client/: model.py
python/examples/splitlearning_diabetes/: run_splitlearning.ipynb
python/examples/splitlearning_diabetes/client/: model.py  scaleout.yaml
python/examples/welding-defect-detection/client/: .scaleoutignore  custom.yaml  validate.py
python/scaleout/: __init__.py
python/scaleout/cli/: client_cmd.py  main.py  package_cmd.py
python/scaleout/client/: fedn_client.py  grpc_handler.py  importer_client.py  state.py  task_receiver.py
scaleout-client-python/: CODE_OF_CONDUCT.md  CONTEXT_MANAGEMENT.md  CONTRIBUTING.md  README.rst  pyproject.toml
scaleout-client-python/examples/FedSimSiam/: README.rst
scaleout-client-python/examples/FedSimSiam/client/: .scaleoutignore  data.py  model.py  monitoring.py  python_env.yaml  scaleout.yaml  startup.py
scaleout-client-python/examples/api-tutorials/: Aggregators.ipynb  Local_Compute_Example.ipynb  Local_Package_Api_Example.ipynb
scaleout-client-python/examples/async-clients/: README.rst  init_fedn.py  init_seed.py  run_clients.py
scaleout-client-python/examples/cifar100/: data.py  init_fedn.py  init_seed.py  run_client.py
scaleout-client-python/examples/huggingface/: README.rst
scaleout-client-python/examples/huggingface/client/: data.py  model.py  python_env.yaml  scaleout.yaml  startup.py
scaleout-client-python/examples/importer-client/: README.rst
scaleout-client-python/examples/importer-client/client/: build.py  python_env.yaml  startup.py
scaleout-client-python/examples/load-test/: requirements.txt
scaleout-client-python/examples/load-test/client/: model.py  train.py  validate.py
scaleout-client-python/examples/mnist-keras/: README.rst
scaleout-client-python/examples/mnist-keras/client/: data.py  model.py  scaleout.yaml  startup.py
scaleout-client-python/examples/mnist-pytorch/: README.rst
scaleout-client-python/examples/mnist-pytorch-DPSGD/: client_settings.yaml
scaleout-client-python/examples/mnist-pytorch-DPSGD/client/: .scaleoutignore  data.py  model.py  python_env.yaml  train.py  validate.py
scaleout-client-python/examples/mnist-pytorch/client/: data.py  scaleout.yaml  (+2 more)
scaleout-client-python/examples/pytorch-keyworddetection-api/: README.rst  main.py  model.py  requirements.txt  sc_client.py  scaleout_api.py  util.py
scaleout-client-python/examples/server-functions/: README.rst  server_functions.py  sf_incremental_aggregation.py  start_sf_session.py
scaleout-client-python/scaleout/: README.rst  __init__.py
scaleout-client-python/scaleout/cli/: __init__.py  client_cmd.py  combiner_cmd.py  main.py  model_cmd.py  package_cmd.py  round_cmd.py  run_cmd.py  session_cmd.py  shared.py  status_cmd.py  upload_util.py  validation_cmd.py
scaleout-client-python/scaleout/client/: connect.py  dispatcher_client.py  dispatcher_package_runtime.py  edge_client.py  grpc_handler.py  importer_client.py  importer_package_runtime.py  logging_context.py  package_runtime.py  task_receiver.py
scaleout-client-python/scaleout/utils/: dist.py
scaleout-client-python/tests/: test_cli_authentication.py  test_cli_context.py  test_cli_token_handling.py  test_context_management.py  test_grpc_auth.py  test_home_dir_validation.py  test_upload_util.py
scaleout-util/: .gitignore  LICENCE  pyproject.toml  scaleout.proto
scaleout-util/scaleoututil/: README.rst  __init__.py  config.py  logging.py
scaleout-util/scaleoututil/api/: client.py
scaleout-util/scaleoututil/auth/: __init__.py  token_cache.py  token_manager.py
scaleout-util/scaleoututil/grpc/: __init__.py  clientrequest.py  scaleout_pb2.py  scaleout_pb2.pyi  scaleout_pb2_grpc.py  statustype.py  tasktype.py
scaleout-util/scaleoututil/helpers/: helperbase.py  helpers.py
scaleout-util/scaleoututil/serverfunctions/: allowed_import.py  serverfunctionsbase.py
scaleout-util/scaleoututil/utils/: __init__.py  checksum.py  dispatcher.py  dist.py  environment.py  http_status_codes.py  model.py  process.py  url.py  yaml.py
scaleout-util/tests/: test_logging.py
(+2024 files in other folders)
