[project]
name = "scaleout-client-workspace"
version = "1.0.0"
requires-python = "~=3.12.8"
dependencies = ["scaleoututil", "scaleout"]

[dependency-groups]
dev = [
  "mypy>=1.0.0",
  "bandit>=1.7.0",
  "safety>=2.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "mypy-protobuf",
  "docker>=7.1.0",
]

[tool.uv.workspace]
members = ["scaleoututil", "scaleout"]

[tool.uv.sources]
scaleoututil= { path = "scaleout-util", editable = true }
scaleout  = { path = "scaleout-client-python", editable = true }

