[project]
name = "scaleout"
version = "1.0.0"
description = "A client library for the Scaleout Edge"
authors = [{ name = "Scaleout Systems AB" }]
requires-python = ">=3.9, <=3.13"
readme = "README.rst"
license = "Apache-2.0"
dependencies = [
    "PyYAML~=6.0",
    "numpy>=1.21.6",
    "psutil",
    "requests",
    "scaleoututil==1.0.0",
    "click==8.1.8",
]

[project.urls]
Homepage = "https://scaleoutsystems.com"
Repository = "https://github.com/scaleoutsystems/scaleout-client"

[dependency-groups]
dev = [
    "pytest~=7.0",
    "black~=23.0",
    "mypy~=1.0",
]

[project.scripts]
scaleout = "scaleout.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
scaleoututil= { path = "../scaleout-util", editable = true }
