[project]
name = "scaleout"
version = "1.0.0"
description = "A client library for the Scaleout Edge"
authors = [{ name = "Scaleout Systems AB" }]
requires-python = ">=3.11, <3.14"
readme = "README.rst"
license = "Apache-2.0"
dependencies = [
    "PyYAML~=6.0",
    "numpy>=1.21.6",
    "psutil",
    "scaleoututil==1.0.0",
    "click==8.3.1",
    "pyjwt>=2.0.0",
    "urllib3>=2.6.0",
]

[project.urls]
Homepage = "https://scaleoutsystems.com"
Documentation = "https://docs.scaleoutsystems.com/en/stable/"

[dependency-groups]
dev = [
    "pytest~=9.0",
    "black~=25.11",
    "mypy~=1.0",
    "responses>=0.25.0",
]

[project.scripts]
scaleout = "scaleout.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
scaleoututil= { path = "../scaleout-util", editable = true }
