[project]
name = "scaleoututil"
version = "1.0.0"
description = "A library for shared resources in the Scaleout Edge"
authors = [{ name = "Scaleout Systems AB" }]
requires-python = ">=3.9, <=3.13"
readme = "scaleoututil/README.rst"
license = "Apache-2.0"
dependencies = [
    "grpcio>=1.68.1,<2",
    "grpcio-tools>=1.68.1,<=1.70",
    "protobuf>=5.0.0,<6.31.0",
    "PyYAML~=6.0",
    "numpy>=1.21.6",
    "requests",
    "virtualenv",
]

[project.urls]
Homepage = "https://scaleoutsystems.com"
Repository = "https://github.com/scaleoutsystems/scaleout-client"

[dependency-groups]
dev = [
    "pytest~=8.4",
    "black~=25.9",
    "mypy~=1.0",
    "mypy-protobuf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
