[project]
name = "scaleoututil"
version = "1.0.0"
description = "A library for shared resources in the Scaleout Edge"
authors = [{ name = "Scaleout Systems AB" }]
requires-python = ">=3.11, <3.14"
readme = "scaleoututil/README.rst"
license = "Apache-2.0"
dependencies = [
    "grpcio==1.78.0",
    "grpcio-tools==1.78.0",
    "protobuf==6.33.5",
    "numpy>=2.2.6",
    "requests>=2.31",
    "urllib3>=2.6.0",
    "virtualenv==20.36.1",
]

[project.urls]
Homepage = "https://scaleoutsystems.com"
Documentation = "https://docs.scaleoutsystems.com/en/stable/"

[dependency-groups]
dev = [
    "pytest~=9.0",
    "black~=25.9",
    "mypy~=1.0",
    "mypy-protobuf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
